# KK_Tools

./: .gitignore  README.md  camt.xml  pyproject.toml  setup.py
kktools/: FX.py  ISO20022.py  __init__.py  bank_statement_parsers.py  camt_parser.py  cli.py  core.py
kktools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_bank_statement_parsers.py  test_camt_parser.py  test_cli.py
